Improve backend-java-starter