@@ -1,8 +1,9 @@
-package com.ganatan.servlets;
+package com.ganatan.modules;
 
 import java.io.IOException;
+import java.util.Map;
+import java.util.HashMap;
 import java.util.List;
-import java.util.Arrays;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
@@ -10,17 +11,21 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-@WebServlet("/persons")
-public class PersonsServlet extends HttpServlet {
+@WebServlet("/")
+public class RootController extends HttpServlet {
+    private final int port = 9900;
+
     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        List<Person> persons = Arrays.asList(
-            new Person(1, "Steven Spielberg", "Cincinnati"),
-            new Person(2, "Christopher Nolan", "London"),
-            new Person(3, "Martin Scorsese", "New York"),
-            new Person(4, "Quentin Tarantino", "Knoxville")
-        );
+        String baseUrl = "http://localhost:" + port;
+
+        Map<String, Object> root = new HashMap<>();
+        root.put("endpoints", List.of(
+            Map.of("url", baseUrl + "/persons"),
+            Map.of("url", baseUrl + "/cities")
+        ));
+
         response.setContentType("application/json");
         response.setCharacterEncoding("UTF-8");
-        new ObjectMapper().writeValue(response.getWriter(), persons);
+        new ObjectMapper().writeValue(response.getWriter(), root);
     }
 }
